:memo: Improve text and book code, reduce code duplicaiton